# wheelchair-esp

./: .gitignore  SETUP.md  clean_credentials.sh
wheelchair-web-controller/: index.html  script.js  style.css
wheelchair_controller/: CMakeLists.txt  Makefile
wheelchair_controller/main/: .env  CMakeLists.txt  env_parser.c  env_parser.h  main.c  motor_control.c  motor_control.h  mqtt_client_app.c  mqtt_client_app.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
